<?xml version="1.0"?>

<!--
 SPDX-FileCopyrightText: Copyright (c) 2021-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 SPDX-License-Identifier: Apache-2.0

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_argus_camera</name>
  <version>3.2.4</version>
  <description>Support for Argus Stereo Camera</description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Shashank Kumar</author>
  <author>Greg Lo</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>camera_info_manager</depend>
  <depend>geometry_msgs</depend>

  <depend>isaac_ros_gxf</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_camera_info_type</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_stereo_image_proc</depend>
  <depend>isaac_ros_image_proc</depend>

  <depend>gxf_isaac_argus</depend>
  <depend>gxf_isaac_camera_utils</depend>
  <depend>gxf_isaac_atlas</depend>
  <depend>gxf_isaac_gxf_helpers</depend>
  <depend>gxf_isaac_messages</depend>
  <depend>gxf_isaac_message_compositor</depend>
  <depend>gxf_isaac_rectify</depend>
  <depend>gxf_isaac_sight</depend>
  <depend>gxf_isaac_tensorops</depend>
  <depend>gxf_isaac_timestamp_correlator</depend>

  <build_depend>isaac_ros_common</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
