<?xml version="1.0"?>

<!--
Copyright (c) 2021, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_argus_camera_stereo</name>
  <version>0.9.0</version>
  <description>Support for Argus Stereo Camera</description>

  <maintainer email="glo@nvidia.com">Greg Lo</maintainer>
  <license>JetPack EULA</license>
  <url type="website">https://developer.nvidia.com/blog/accelerating-ai-modules-for-ros-and-ros-2-on-jetson/</url>
  <author>Shashank Kumar</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>  
  <depend>isaac_ros_common</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
